<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "@string/loginTitle"
                android:textSize="@dimen/LoginTitleTextSize"
                android:textColor="@color/cardview_dark_background"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>
            <EditText
                android:id="@+id/email"
                android:layout_width="312dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/unfocused_edit"
                android:fontFamily="sans-serif"
                android:hint="이메일"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/emailInput"
                android:textColorHint="@color/stdColorHint2"
                android:textSize="17sp" />


            <EditText
                android:id="@+id/password"
                android:layout_width="312dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/unfocused_edit"
                android:fontFamily="sans-serif"
                android:hint="비밀번호"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/pwInput"
                android:textColorHint="@color/stdColorHint2"
                android:textSize="17sp" />
            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="312dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/loginBtn"
                android:text="@string/action_sign_in"
                android:textColor="@color/cardview_light_background"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginSocialTitle"
                android:textAlignment="center"
                android:textSize="@dimen/LoginTitleTextSize"
                android:textColor="@color/cardview_dark_background"
                android:layout_marginTop="@dimen/Login_Social_layout_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <Button
                android:id="@+id/login_btn_facebook"
                android:layout_width="312dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:background="@drawable/background_border_search"
                android:backgroundTint="@color/colorFaceBookBtn"
                android:text="페이스북 로그인"
                android:textColor="@color/colorFaceBookBtn_text"
                android:textStyle="bold" />
            <Button
                android:id="@+id/login_btn_kakao"
                android:layout_width="312dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/background_border_search"
                android:backgroundTint="@color/colorKaKaoBtn"
                android:text="카카오톡 로그인"
                android:textColor="@color/colorKaKaoBtn_text"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/JoinandFidLayout_vertical_margin"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="149dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@color/cardview_light_background"
                    android:gravity="end|center"
                    android:text="@string/action_join"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/cardview_dark_background"
                    android:id="@+id/join_btn"/>

                <TextView
                    android:layout_width="149dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@color/cardview_light_background"
                    android:gravity="start|center_vertical"
                    android:text="@string/action_find_user"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/cardview_dark_background"
                    android:id="@+id/find_auth_btn"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
