<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:id="@+id/firstline_container">
    <TextView
        android:id="@+id/firstline_text_view"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:text="@string/grade_default_text"
        android:textSize="16sp"
        android:textColor="#818181"
        android:textAlignment="viewStart"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_toRightOf="@id/firstline_text_view"
        android:layout_centerVertical="true"
        android:gravity="end"
        android:layout_marginRight="16dp"
        android:id="@+id/share_button"
        android:text="@string/share_button_text"
        android:textSize="12sp"
        android:textStyle="normal"
        android:textColor="#007AFF"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#9a9a9a"
        android:layout_below="@id/firstline_container"
        android:id="@+id/firstline_text_view_divider">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_below="@id/firstline_text_view_divider"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/secondline_cnt_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="12"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/toolbar_cnt_text_color"
                android:textAlignment="center"
                />
            <TextView
                android:id="@+id/secondline_text_view"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/main_header_secondview_text"
                android:textStyle="normal"
                android:textSize="13sp"
                android:textColor="@color/toolbar_second_text_color"
                android:textAlignment="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/secondline_nextcnt_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="03"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/toolbar_cnt_text_color"
                android:textAlignment="center"
                />
            <TextView
                android:id="@+id/secondline_nexttext_view"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/main_header_secondview_next_text"
                android:textStyle="normal"
                android:textSize="13sp"
                android:textColor="@color/toolbar_second_text_color"
                android:textAlignment="center"
                />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
